style.scss
/* ... */
// Page

#page-content {
  margin-top: 50px;
}

#page-info {
  padding-top: 50px;

  @include mobile {
    padding-top: 35px;
  }
}

#page-title {
  color: $lightestGray;
  font-family: $rubik;
  font-weight: 700;
  font-size: $biggest;
  letter-spacing: 0.3px;
  word-spacing: 2px;
  margin: auto;

  @include mobile {
    font-size: $medium;
    text-align: left;
  }

  &.page {
    color: $darkBlue;
    font-weight: 700;
    font-size: $massive;
    letter-spacing: -2px;
    margin-bottom: 15px;

    @include mobile {
      font-size: $biggest;
    }

    @include mobileSmall {
      font-size: $bigger;
    }
  }

  &.home {
    letter-spacing: -0.4px;

    @include mobile {
      font-size: $bigger;
    }

    @include mobileSmall {
      font-size: $big;
    }
  }

  &.course {
    font-size: $biggest;

    @include mobile {
      font-size: $bigger;
      text-align: center;
    }

    @include mobileSmall {
      font-size: $big;
    }
  }
}

#page-subtitle {
  color: $lightestGray;
  font-size: $small;
  font-family: $roboto;
  letter-spacing: -0.3px;

  @include mobile {
    font-size: $smaller;
    text-align: left;
    padding-right: 20px;
  }

  &.home {
    word-spacing: 1px;

    @include mobileSmall {
      font-size: $smallest;
    }
  }

  &.page {
    color: $blue;
    font-size: $medium;
    padding-left: 3px;

    @include mobile {
      font-size: $small;
    }

    @include mobileSmall {
      font-size: $smaller;
    }
  }

  &.course {
    @include mobile {
      text-align: center;
    }
  }
}

.image {
  margin-top: 20px;
}

.small-link {
  font-size: $smallest;
}

 // Footer

#wrapper-footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin-top: 40px;
  margin-bottom: 20px;

  &.home {
    position: fixed;
    bottom: 0;

    @include mobile {
      margin-bottom: 10px;
    }

    #site-footer {
      border: none;
      text-align: left;
    }

    #site-credit {
      display: flex;
      justify-content: space-between;
      align-items: center;
      flex-wrap: wrap;

      p {
        margin: 10px 0;
      }

      // .page-social {
      //   a {
      //     margin-right: 15px;
      //
      //     @include mobile {
      //       margin-right: 20px;
      //     }
      //   }
      // }
    }
  }
}

#site-footer {
  width: 100%;
  padding-top: 20px;
  border-top: 1px solid $lighterGray;
  text-align: center;
}

#site-credit {
  font: $smallest $rubik;
  color: $lightGray;
}

// tooltip

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltip-text {
  visibility: hidden;
  width: 110px;
  color: $blue;
  background-color: $lighterBlue;
  font-weight: 500;
  text-align: center;
  text-transform: none;
  border-radius: 20px;

  position: absolute;
  top: 100%;
  left: 50%;
  margin-top: 5px;
  margin-left: -60px;
  padding: 5px 0;
  letter-spacing: -.1px;

  &.page {
    color: $white;
  }
}

.tooltip:hover .tooltip-text {
  visibility: visible;
}

.tooltip .tooltip-text::after {
  content: " ";
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent $lighterBlue transparent;
}

// misc

.note {
  display: block;
  padding-top: 8px;
  padding-left: 2px;
  font-size: $tiny;
  font-family: $rubik;
  color: $lightGray;
}

.dot {
  height: 9px;
  width: 9px;
  background-color: $lighterGray;
  border-radius: 50%;
  display: inline-block;

  &.space {
    margin-left: 1px;
  }

  @include mobile {
    height: 7px;
    width: 7px;
  }

  @include mobileSmall {
    height: 5px;
    width: 5px;
  }
}

.blinking-cursor {
  @include blinkingCursorAnimation($lighterGray);
}

@include blinkingCursorKeyframes($lighterGray);

// FAQ

/* Accordion */
.tabs {
  overflow: hidden;
}

.tab {
  width: 100%;
  overflow: hidden;
  color: $darkBlue;
  border-bottom: 1px solid $lighterGray;

  &:last-child {
    border-bottom: none;
  }

  &-label {
    display: flex;
    justify-content: space-between;
    padding: 1em;
    font-weight: 500;
    font-size: $small;
    cursor: pointer;
    // Icon
    &:hover {
      color: $lightBlue;
    }
    // for flex
    &::before {
      content: "";
      padding-left: 15px;
    }
    &::after {
      content: "\276F";
      width: 1em;
      height: 1em;
      transition: all .3s ease-in-out;
    }
  }
  &-content {
    max-height: 0;
    padding: 0 1em;
    color: $gray;
    transition: all .3s ease-in-out;
    overflow: hidden;

    p:first-child {
      margin-top: 0;
    }
  }
  &-close {
    display: flex;
    justify-content: flex-end;
    padding: 1em;
    font-size: 0.75em;
    cursor: pointer;
    &:hover {
      color: $lightBlue;
    }
  }
}

.tab > input {
  position: absolute;
  opacity: 0;
  z-index: -1;

  &:checked {
    + .tab-label {
      color: $lightBlue;
      &::after {
        color: $lightBlue;
        transform: rotate(90deg) translate(4px, -2px);
      }
    }
    ~ .tab-content {
      max-height: 100vh;
      padding: 1em;
    }
  }
}

// Boxes

.boxes {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.box {
  flex: 1 1 auto;
  margin: 10px;
  width: 280px;

  border-radius: 3px;
  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.12);
  &:hover, &:active {
    box-shadow: 3px 6px 24px rgba(0, 0, 0, 0.12);
  }

  @include mobile {
    min-width: 200px;
  }
}

.box-container {
  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 15px 10px;
}

// Steps

.steps {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.step {
  flex: 1 1 auto;
  margin: 10px;
  width: 200px;
}

.step-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;

  padding: 15px 10px;
}
/* ... */

